@@ -96,7 +96,7 @@ nodist_EXTRA_libcor_la_SOURCES = dummy.c  ## forces automake to generate the LIN
 
 libcordir = libcor
 libcor_la_DEPENDENCIES = SYSTEM.def
-libcor_la_M2FLAGS = -I. -I$(GM2_SRC)/gm2-libs-coroutines -I$(GM2_SRC)/gm2-libs -I$(GM2_SRC)/gm2-libs-iso
+libcor_la_M2FLAGS = -I. -I$(GM2_SRC)/gm2-libs-coroutines -I$(GM2_SRC)/gm2-libs -I$(GM2_SRC)/gm2-libs-iso -fm2-g -g
 libcor_la_LINK = $(LINK)
 BUILT_SOURCES = SYSTEM.def
 CLEANFILES = SYSTEM.def
