@@ -148,7 +148,7 @@ libgm2_la_SOURCES = $(M2MODS) \
 libgm2dir = libpim
 libgm2_la_DEPENDENCIES = SYSTEM.def
 libgm2_la_CFLAGS = -I. -I$(GM2_SRC)/gm2-libs -I$(GM2_SRC)/gm2-libs-iso -DBUILD_GM2_LIBS -I@srcdir@/../
-libgm2_la_M2FLAGS = -I. -I$(GM2_SRC)/gm2-libs -I$(GM2_SRC)/gm2-libs-iso
+libgm2_la_M2FLAGS = -I. -I$(GM2_SRC)/gm2-libs -I$(GM2_SRC)/gm2-libs-iso -fm2-g -g
 libgm2_la_LINK = $(LINK)
 BUILT_SOURCES = SYSTEM.def
 CLEANFILES = SYSTEM.def
