@@ -1,3 +1,12 @@
+2019-10-25      Gaius Mulley <gaius.mulley@southwales.ac.uk>
+
+	* gm2/gm2-libs-coroutines/SYSTEM.mod:  (localInit) initialize
+          RTint after RTco.
+	* gm2/gm2-libs-iso/COROUTINES.mod:  increase stack size
+          initialize RTint after RTco.
+	* gm2/gm2-libs/RTint.def:  (Init) exported.
+	* gm2/gm2-libs/RTint.mod:  (initialized) new boolean.
+
 2019-10-24      Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
 	* gm2/isocoroutines/run/pass/coroutine.mod:  increase
